--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <h2 class="title">اساتید مجموعه آوای زریاب</h2>
         <div class="teachers-grid">
           <article class="teacher-card">
-            <img src="media/pic.jpg" alt="استاد معنوی">
+            <img src="pic.jpg" alt="استاد معنوی">
             <div class="meta">
               <h3 style="margin:0 0 6px">استاد معنوی</h3>
               <a class="chip" href="#/teacher/manavi">صفحهٔ اختصاصی</a>
@@ -240,7 +240,7 @@
           </article>
 
           <article class="teacher-card">
-            <img src="media/enayati.jpg" alt="استاد عنایتی">
+            <img src="enayati.jpg" alt="استاد عنایتی">
             <div class="meta">
               <h3 style="margin:0 0 10px">استاد عنایتی</h3>
               <a class="chip" href="#/teacher/enayati">صفحهٔ اختصاصی</a>
@@ -248,7 +248,7 @@
           </article>
 
           <article class="teacher-card">
-            <img src="media/ali.jpg" alt="استاد علی تلئیلی">
+            <img src="ali.jpg" alt="استاد علی تلئیلی">
             <div class="meta">
               <h3 style="margin:0 0 6px">استاد علی تلئیلی</h3>
               <a class="chip" href="#/teacher/ali-teleili">صفحهٔ اختصاصی</a>
@@ -407,8 +407,8 @@
       ],
       videos: [
         // لینک ویدئو (mp4/لینک آپارات/یوتیوب با پوستر)
-        {type:"video", src:"media/film2.mp4", poster:"media/poster1.png"},
-        {type:"video", src:"media/film1.mp4", poster:"media/poster2.png"}
+        {type:"video", src:"film2.mp4", poster:"poster1.png"},
+        {type:"video", src:"film1.mp4", poster:"poster2.png"}
       ]
     },
     "enayati": {
@@ -617,3 +617,4 @@
 </script>
 </body>
 </html>
+
